# ortclib-services-cpp

./: .gitignore  BUILD.gn  README.md  license.txt
openpeer/services/: IBackOffTimer.h  IBackOffTimerPattern.h  IBackgrounding.h  ICache.h  IDHKeyDomain.h  IDHPrivateKey.h  IDHPublicKey.h  IDNS.h  IDecryptor.h  IHTTP.h  IHelper.h  IICESocket.h  IICESocketSession.h  ILogger.h  IMessageLayerSecurityChannel.h  IMessageQueueManager.h  IRSAPrivateKey.h  IRSAPublicKey.h  IRUDPChannel.h  IRUDPICESocketSession.h  IRUDPListener.h  IRUDPMessaging.h  IRUDPTransport.h  IReachability.h  ISTUNDiscovery.h  ISTUNRequester.h  ISTUNRequesterManager.h  ISettings.h  ITCPMessaging.h  ITURNSocket.h  ITransportStream.h  IWakeDelegate.h  RUDPPacket.h  RUDPProtocol.h  STUNPacket.h  services.h  types.h
openpeer/services/cpp/: services_BackOffTimer.cpp  services_BackOffTimerPattern.cpp  services_Backgrounding.cpp  services_Cache.cpp  services_CanonicalXML.cpp  services_DHKeyDomain.cpp  services_DHPrivateKey.cpp  services_DHPublicKey.cpp  services_DNS.cpp  services_DNSMonitor.cpp  services_Decryptor.cpp  services_Encryptor.cpp  services_Factory.cpp  services_HTTP.cpp  services_HTTP_WinRT.cpp  services_Helper.cpp  services_ICESocket.cpp  services_ICESocketSession.cpp  services_Logger.cpp  services_MessageLayerSecurityChannel.cpp  services_MessageQueueManager.cpp  services_RSAPrivateKey.cpp  services_RSAPublicKey.cpp  services_RUDPChannel.cpp  services_RUDPChannelStream.cpp  services_RUDPICESocketSession.cpp  services_RUDPListener.cpp  services_RUDPMessaging.cpp  services_RUDPPacket.cpp  services_RUDPTransport.cpp  services_Reachability.cpp  services_STUNDiscovery.cpp  services_STUNPacket.cpp  services_STUNRequester.cpp  services_STUNRequesterManager.cpp  services_Settings.cpp  services_TCPMessaging.cpp  services_TURNSocket.cpp  services_TransportStream.cpp  services_services.cpp  (+1 more)
openpeer/services/internal/: platform.h  services.h  services_AllocatorWithNul.h  services_BackOffTimer.h  services_BackOffTimerPattern.h  services_Backgrounding.h  services_Cache.h  services_CanonicalXML.h  services_DHKeyDomain.h  services_DHPrivateKey.h  services_DHPublicKey.h  services_DNS.h  services_DNSMonitor.h  services_Decryptor.h  services_ETWTracing.h  services_ETWTracing.man  services_Encryptor.h  services_Factory.h  services_HTTP.h  services_HTTP_WinRT.h  services_Helper.h  services_ICESocket.h  services_ICESocketSession.h  services_IRUDPChannelStream.h  services_Logger.h  services_MessageLayerSecurityChannel.h  services_MessageQueueManager.h  services_RSAPrivateKey.h  services_RSAPublicKey.h  services_RUDPChannel.h  services_RUDPChannelStream.h  services_RUDPICESocketSession.h  services_RUDPListener.h  services_RUDPMessaging.h  services_RUDPTransport.h  services_Reachability.h  services_STUNDiscovery.h  services_STUNRequester.h  services_STUNRequesterManager.h  services_Settings.h  (+6 more)
openpeer/services/test/: TestBackOffTimer.cpp  TestCanonicalXML.cpp  TestDH.cpp  TestDNS.cpp  TestHelper.cpp  TestICESocket.cpp  TestRUDPICESocket.cpp  TestRUDPICESocketLoopback.cpp  TestRUDPListener.cpp  TestSTUNDiscovery.cpp  TestSTUNPacket.cpp  TestTCPMessagingLoopback.cpp  TestTURNSocket.cpp  boost_replacement.cpp  config.h  main.cpp  testing.cpp  testing.h
ortc/services/: IBackOffTimer.h  IBackOffTimerPattern.h  IBackgrounding.h  ICache.h  ICanonicalXML.h  IDHKeyDomain.h  IDHPrivateKey.h  IDHPublicKey.h  IDNS.h  IDecryptor.h  IEncryptor.h  IFactory.h  IHTTP.h  IHelper.h  IICESocket.h  IICESocketSession.h  ILogger.h  IMessageLayerSecurityChannel.h  IMessageQueueManager.h  IRSAPrivateKey.h  IRSAPublicKey.h  IRUDPChannel.h  IRUDPListener.h  IRUDPMessaging.h  IRUDPTransport.h  IReachability.h  ISTUNDiscovery.h  ISTUNRequester.h  ISTUNRequesterManager.h  ISettings.h  ITCPMessaging.h  ITURNSocket.h  ITransportStream.h  IWakeDelegate.h  RUDPPacket.h  STUNPacket.h  services.h  types.h
ortc/services/cpp/: ifaddrs-android.cc  services.events.json  services_BackOffTimer.cpp  services_BackOffTimerPattern.cpp  services_Backgrounding.cpp  services_Cache.cpp  services_CanonicalXML.cpp  services_DHKeyDomain.cpp  services_DHPrivateKey.cpp  services_DHPublicKey.cpp  services_DNS.cpp  services_DNSMonitor.cpp  services_Decryptor.cpp  services_Encryptor.cpp  services_HTTP.cpp  services_HTTP_WinRT.cpp  services_HTTP_WinUWP.cpp  services_HTTP_override.cpp  services_Helper.cpp  services_ICESocket.cpp  services_ICESocketSession.cpp  services_Logger.cpp  services_MessageLayerSecurityChannel.cpp  services_MessageQueueManager.cpp  services_RSAPrivateKey.cpp  services_RSAPublicKey.cpp  services_RUDPChannel.cpp  services_RUDPChannelStream.cpp  services_RUDPListener.cpp  services_RUDPMessaging.cpp  services_RUDPPacket.cpp  services_RUDPTransport.cpp  services_Reachability.cpp  services_STUNDiscovery.cpp  services_STUNPacket.cpp  services_STUNRequester.cpp  services_STUNRequesterManager.cpp  services_Settings.cpp  services_TCPMessaging.cpp  services_TURNSocket.cpp  (+3 more)
ortc/services/internal/: platform.h  services.events.h  services.events.jman  services.events_win.h  services.events_win_etw.h  services.events_win_etw.man  services.events_win_etw.wprp  services.h  services_BackOffTimer.h  services_BackOffTimerPattern.h  services_Backgrounding.h  services_Cache.h  services_CanonicalXML.h  services_DHKeyDomain.h  services_DHPrivateKey.h  services_DHPublicKey.h  services_DNS.h  services_DNSMonitor.h  services_Decryptor.h  services_Encryptor.h  services_HTTP.h  services_HTTP_WinRT.h  services_HTTP_WinUWP.h  services_HTTP_override.h  services_Helper.h  services_ICESocket.h  services_ICESocketSession.h  services_IRUDPChannelStream.h  services_Logger.h  services_MessageLayerSecurityChannel.h  services_MessageQueueManager.h  (+18 more)
ortclib/services/: IBackOffTimerPattern.h  ICanonicalXML.h  IDHPrivateKey.h  IEncryptor.h  IFactory.h  IICESocketSession.h  IRUDPMessaging.h  ISTUNRequesterManager.h  ISettings.h  ITCPMessaging.h  STUNPacket.h
projects/android/: Android.mk  build_op-services-cpp_android.sh
projects/msvs/: ortclib.services.Win32.sln  ortclib.services.sln
(+138 files in other folders)
